2008-11-07  Michael Calmer  <mc@suse.de>
	* release version 0.66

	* src/pam-modules.h: delete option if argument is 0 (bnc#442552)
	* src/mod_pam_pwcheck.c: remove obsolete parsing code

2008-11-07  Thorsten Kukuk  <kukuk@suse.de>

	* src/mod_pam_gnome_keyring.c (write_config_gnome_keyring): New
	[bnc#440448].

	* src/Makefile.am (pam_config_SOURCES): Add mod_pam_gnome_keyring.c

	* src/pam-config.c (main): Implement nullok for single services,
	too [bnc#440437].

2008-11-05  Michael Calmer  <mc@suse.de>

	* release version 0.65

	* src/pam-config.c: fix error at option parsing
	* po/: update translation files

2008-10-22  Michael Calmer  <mc@suse.de>

	* src/mod_pam_selinux.c: configure with open and close option.
	* src/supported-modules.h: add pam_selinux

2008-10-21  Michael Calmer  <mc@suse.de>

	* release version 0.64

	* src/mod_pam_selinux.c: New
	* src/supported-modules.h: Add pam_pwhistory.
	* src/Makefile.am (pam_config_SOURCES): Add mod_pam_selinux.c.
	* src/sanity_checks.c: Check that pam_selinux and pam_apparmor are
	not enabled at the same time.
	* po/ : update translations

2008-10-14  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.63

	* src/mod_pam_pwhistory.c: New.
	* src/supported-modules.h: Add pam_pwhistory.
	* src/pam-config.c (main): Enable pam_pwhistory if pam_cracklib
	is enabled for initial config.

	* src/Makefile.am (pam_config_SOURCES): Add mod_pam_pwhistory.c.

	* src/pam-module.h (DECLARE_BOOL_OPTS_10): Add.
	* src/mod_pam_lastlog.c: Add new options.

2008-10-07  Michael Calmer  <mc@suse.de>

	* release version 0.62

	* src/mod_pam_fp.c: New file (FATE#300416).
	* src/mod_pam_thinkfinger.c: check for pam_fp.
	* src/mod_pam_mount.c: Likewise.

2008-10-06  Michael Calmer  <mc@suse.de>

	* release version 0.61

	* src/mod_pam_pwcheck.c: call set_opt with strdup to prevent
	the lost of the value.
	* src/mod_pam_krb5.c: Likewise.
	* src/mod_pam_ssh.c: Likewise.
	* tests/testcases/test-pwcheck-string-opts.single: add testcase
