@@ -1,11 +1,11 @@
 .\"     Title: pam-config
 .\"    Author: 
 .\" Generator: DocBook XSL Stylesheets v1.73.2 <http://docbook.sf.net/>
-.\"      Date: 11/07/2008
+.\"      Date: 11/10/2008
 .\"    Manual: Reference Manual
 .\"    Source: Reference Manual
 .\"
-.TH "PAM\-CONFIG" "8" "11/07/2008" "Reference Manual" "Reference Manual"
+.TH "PAM\-CONFIG" "8" "11/10/2008" "Reference Manual" "Reference Manual"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -243,7 +243,7 @@ option to all pam_fp\.so invocations\.
 .PP
 \fB\-\-gnome_keyring\fR
 .RS 4
-Enable/Disable pam_gnome_keyring\.so module in the service\.
+Enable/Disable pam_gnome_keyring\.so
 .RE
 .PP
 \fB\-\-gnome_keyring\-auto_start\fR
