@@ -340,7 +340,7 @@
             <term><option>--gnome_keyring</option></term>
             <listitem>
               <para>
-                Enable/Disable pam_gnome_keyring.so module in the service.
+                Enable/Disable pam_gnome_keyring.so
               </para>
             </listitem>
           </varlistentry>
