@@ -1,3 +1,7 @@
+2008-11-10  Michael Calmer  <mc@suse.de>
+	* src/mod_pam_gnome_keyring.c: no options in AUTH section.
+	(bnc#443189)
+
 2008-11-07  Michael Calmer  <mc@suse.de>
 	* release version 0.66
 
